--- a/dom_narkomfina.html
+++ b/dom_narkomfina.html
@@ -39,49 +39,49 @@
 
           <ul class="grey">
             <li>
-              <a href="">Пространственная организация жилого комплекса</a>
+              <a href="#s4-1">Пространственная организация жилого комплекса</a>
             </li>
 
             <li>
-              <a href="">Архитектура жилого дома</a>
+              <a href="#s4-2">Архитектура жилого дома</a>
             </li>
 
             <li>
-              <a href="">Проектные и технологические решения дома Наркомфина</a>
+              <a href="#s4-3">Проектные и технологические решения дома Наркомфина</a>
             </li>
 
             <li>
-              <a href="">Нарушение концептуального замысла и проектных решений после окончания строительства</a>
+              <a href="#s4-4">Нарушение концептуального замысла и проектных решений после окончания строительства</a>
             </li>
 
           </ul>
         </li>
 
         <li>
-          <a href="">Критика проекта</a>
+          <a href="#s5">Критика проекта</a>
 
           <ul class="grey">
             <li>
-              <a href="">С технической стороны</a>
+              <a href="#s5-1">С технической стороны</a>
             </li>
 
             <li>
-              <a href="">С бытовой стороны</a>
+              <a href="#s5-2">С бытовой стороны</a>
             </li>
 
           </ul>
         </li>
 
         <li>
-          <a href="">Известные жители</a>
+          <a href="#s6">История эксплуатации здания и его современное состояние</a>
         </li>
 
         <li>
-          <a href="">Современное состояние памятника</a>
+          <a href="#s7">История эксплуатации здания и его современное состояние</a>
         </li>
 
         <li>
-          <a href="">Интересные факты о Доме Наркомфина</a>
+          <a href="#s8">Роль и значение проекта в исторической перспективе</a>
         </li>
 
         <!-- <li>
@@ -143,7 +143,7 @@
       <p>Принцип компоновки жилых ячеек, подобный применённому в проекте дома Наркомфина, был реализован в ряде проектов и на Западе, в частности, в построенном в Бреслау (Вроцлаве) по проекту Ганса Шаруна общежитии для холостых (1929 год). Наличие коридора, обслуживающего несколько уровней, характерно для жилых единиц Ле Корбюзье</p>
       <p>Обследование дома Наркомфина, проведенное в 1994 году профессором МАрхИ Еленой Овсянниковой и швейцарскими студентами из Женевы, которыми руководил Жан-Клод Люди, показало, что его внутренняя структура оказалась ещё сложнее, чем было заявлено в проекте. Нестандартные квартиры, как оказалось, были на каждом этаже, хотя большинство их — типовые. Общее число вариантов жилых ячеек могло доходить до одиннадцати (включая помещение для консьержа, «студию» на верхнем этаже, общежитие на кровле и пентхаус самого Милютина). Характерно, что в конце коридора пятого этажа находилась общая кухня, организованная уже в 1940-е годы, а из самого коридора был доступ в чуланы для хранения вещей, не всегда помещавшихся в ячейки «F».</p>
 
-      <h3>Проектные и технологические решения дома Наркомфина</h3>
+      <h3 id='s4-3'>Проектные и технологические решения дома Наркомфина</h3>
 
       <p>Дом был возведен в 1928—1930 годах с применением новинок тогдашней строительной индустрии, в том числе цельнолитого железобетона (выдержавшего впоследствии и бомбежки и многолетнее отсутствие ремонта), а также новых материалов. Он построен на колоннах, это висячая (каркасная) конструкция, что создает устойчивость при оползнях и колебаниях почвы — под домом течет подземная река Синичка, заключенная в трубу. Несущий каркас с сеткой круглых в плане колонн диаметром 350 мм связан в продольном и поперечном направлениях железобетонными прогонами. Наружные стены, являющиеся по сути облегченными термоизоляционными щитами, отнесены на консолях от колонн каркаса, в результате чего колонны оказываются внутри здания. Технологические решения плоской кровли с системой водостоков, теплоизоляцией «торфоплитами» из прессованного торфа и гидроизоляцией битумом следовали схеме, разработанной ведущим германским специалистом по плоским крышам Эрнстом Маем.</p>
       <p>В доме Наркомфина в 1929 году был проведен эксперимент по цветовому решению квартир, которым руководил специалист из Баухауса профессор Хиннерк Шепер. Шепер выполнил цветовое оформление интерьеров дома, для чего был на год откомандирован в Москву. Стены в квартирах не оклеивались обоями, а гладко окрашивались — теплые гаммы колеров для одних квартир и холодные для других. Теплая гамма была основана на оттенках жёлтого и охры, холодная — голубого и серого. Обе были реализованы в двух вариантах: сначала в сильной, а потом слабой насыщенностью колеров. Образцы эскизов цветового решения интерьеров типовых квартир дома Наркомфина по Шеперу представлены в книге Е. Овсянниковой и Е. Милютиной Жилой комплекс «Дом Наркомфина», Екатеринбург: Tatlin, 2015 — 64 с.</p>
@@ -151,18 +151,18 @@
       <p>Во всех жилых помещениях полы из дубового паркета (широкий паркет 8 см). В ванных комнатах, по крайней мере, трёхкомнатных квартир полы из пробкового дерева (сохранились до 1960 года), заменены кафельной плиткой. Электропроводка открытого типа — витой провод на фарфоровых изоляторах. Электровыключатели поворотные, как и розетки, также фарфоровые.</p>
       <p>Корпус общественного обслуживания, названный авторами «коммунальным», представлял собой замкнутый четырёхэтажный, почти кубический объём со стороной куба около 10 метров. Он был связан с жилым корпусом переходом на уровне второго этажа. Корпус предназначался для размещения общей кухни-столовой, библиотеки и других бытовых и общественных помещений</p>
 
-      <h3>Нарушение концептуального замысла и проектных решений после окончания строительства</h3>
+      <h3 id='s4-4'>Нарушение концептуального замысла и проектных решений после окончания строительства</h3>
 
       <p>В 1932—1934 году на территории, первоначально предназначавшейся для детского сада и яслей при Доме Наркомфина (вдоль его южной границы), по проекту архитектора Сергея Леонтовича был построен жилой дом работников Совнаркома (дом 25, корп. 10), композиционно никак не связанный с комплексом. В итоге сохранение усадебных построек по линии Новинского бульвара, а также строительство в границах первоначально отведённого участка ещё одного жилого дома, чужеродного комплексу, не позволило полностью осуществить авторский замысел по организации пространства.</p>
       <p>В середине 1930-х годов в виду острого дефицита жилья все пролёты между столбами-опорами первого этажа были застроены, здесь расположились дополнительные квартиры (сверх 50-ти проектных) с частичным заглублением их в цоколь, в общий тамбур которых (на две квартиры) с улицы можно было попасть спуском по четырём ступенькам вниз. В северной части цокольного этажа было организовано служебное общежитие, третье в доме. Служебное помещение было также пристроено к южному фасаду, надстроен коммунальный корпус.</p>
       <p>Разработанный авторами проекта социально-бытовой уклад жизни, заложенный в основу структуры жилого комплекса, оказался неосуществимым в условиях жизни тех лет, к тому же жильцы дома в большей части были психологически неподготовлены к таким переменам. Не был построен жилой корпус второй очереди, не был построен комплекс служебного дворика, объединяющего механическую прачечную, гараж для жильцов, котельную. Сооружена была лишь прачечная, широко использовавшаяся жильцами лишь в первые годы, а после войны перешедшая в ведомственное подчинение.</p>
       <p>Следует сказать, что контингент живущих был в какой-то мере однородным лишь в первые годы после заселения дома. После арестов 1937—1938 годов и окончания Великой Отечественной войны он существенным образом изменился. Практически все трёхкомнатные квартиры нижних этажей превратились в коммунальные. Как пишет в своих воспоминаниях о Доме Наркомфина Екатерина Милютина, «квартиры для одиночек заселили семьями, семейные сделали коммунальными. Вместо закрытой столовой (коммунальный корпус) на пятом этаже сделали коммунальную кухню с рядами плит и корыт. Детский сад закрыли, коммунальный корпус превратился в типографию. Прачечная сохранилась, но она постепенно перестала обслуживать жильцов. В конце концов дом передали в ЖЭК, покрасили немыслимой жёлтой краской и перестали ремонтировать»</p>
 
-      <h2>Критика проекта</h2>
+      <h2 id='s5'>Критика проекта</h2>
 
       <p>Дому Наркомфина посвящено большое количество публикаций, как в российских, так и в зарубежных источниках. В западных источниках описания дома Наркомфина нередко сопровождаются определениями «утопия» и «утопический» (англ. utopian housing project). В советских публикациях авторы старались избегать такой трактовки, привычно используя лексику типа «эксперимент», «экспериментальный», «переходного типа» и т. п., как правило, не акцентируя внимание на его результатах.</p>
 
-      <h2>С технической стороны</h2>
+      <h2 id='s5-1'>С технической стороны</h2>
 
       <p>Объектом критики, в первую очередь со стороны качества использованных строительных материалов, стали несущие стены, так как жилой корпус ни разу не ремонтировали за все почти 90 лет его существования. Штукатурка фасадов осыпалась, а стены из кустарно выполненных цементных и шлаковых блоков, сделанных прямо на стройке, разрушались. Наполнителями в цементном растворе служили разные подручные материалы, в том числе, металлургический шлак, солома, камыш.</p>
       <p>Каркасная конструкция дома на ножках весьма затруднила устройство в нём вертикальных коммуникаций, не говоря о промерзании нижнего жилого этажа. Канализационные стояки пришлось утеплять и пропускать в нестандартных, специально утолщенных колоннах, что первоначально не учитывалось в эскизном архитектурном решении. Ряд проблем вызвала и плоская кровля и связанные с ней протечки. Исполнение такой кровли требует особой тщательности и качественных материалов, которые в период строительства можно было достать только благодаря инициативе заказчика ранга Милютина. Такая кровля требует постоянного ухода — прочистки загрязненных или замерзших внутренних водостоков, починки покрытия, регулярного сбрасывания снега.</p>
@@ -170,7 +170,7 @@
       <p>Эксперимент с устройством раздвижных горизонтальных окон «не достиг цели и вызвал нарекания жильцов». Конструкции скользящих деревянных рам, сходные с изобретенными Ле Корбюзье и Пьером Жаннере, были доработаны с учетом российского климата. Ленточные окна включали два элемента: подвижные и неподвижные. Неподвижные с железобетонными рамами, подвижные — с дубовыми, скользящими на роликах по направляющему рельсу и прижимающимися к бетону рукояткой с эксцентриком. Места прижима в окне с деревянной рамой были обиты брезентом и войлоком. Через пару десятилетий уплотнения износились, бетонные рамы стали осыпаться, обнажая металлическую арматуру, сдвижные элементы окон заклинивали и в зимнее время пропускали холодный воздух.</p>
       <p>Оборудование квартир не удалось сделать идеальным, ни стилистически, ни функционально. Например, там, где удавалось поставить ванну, то это были громоздкие дореволюционные чугунные изделия, занимавшие слишком много места в габаритах первоначально запланированных душевых кабин. Солидная по площади ванная комната была только в квартире Милютина</p>
 
-      <h2>С бытовой стороны</h2>
+      <h2 id='s5-2'>С бытовой стороны</h2>
 
       <p>С бытовой стороны Дом Наркомфина также вызывал множество нареканий. Основой явилось нарушение заложенного в проекте принципа заселения типовых ячеек (квартир), связанного с тяжелейшим жилищным кризисом в СССР. В Доме Наркомфина в 1940-е…1970-е годы были распространены примеры квартир-коммуналок, когда одной из семей приходилось жить в общей комнате, а другой — в спальне. При этом минимальные размеры кухонь и санузлов приводили к скандалам и, в результате, к резкой критике архитектуры авангарда в целом. По-видимому, благополучными исключениями являлись квартиры бывших наркомов Н. Милютина и Н. Семашко.</p>
       <p>Не выдержал Дом Наркомфина и конкуренцию с традиционными в отношении строительных технологий домами, выстроенными по инициативе Моссовета. Если в Доме Наркомфина легкие бетонные блоки разрушались, то толстые и непромерзаемые кирпичные стены домов Моссовета до сих пор отличаются хорошей звукоизоляцией всех помещений и сохраняют микроклимат в квартирах</p>
@@ -178,7 +178,7 @@
       Успешно функционировали только два коммунальных хозяйственно-бытовых учреждения: прачечная и детский сад (в коммунальном корпусе). Но и они во время войны были закрыты.</p>
       <p>Авторы монографии советского периода (1986), посвященной Дому Наркомфина, подводя итоги, писали, что «эксперимент с организацией новых форм ведения социально-бытового хозяйства для начала 1930-х годов был преждевременным и оказался несостоятельным». Современный английский антрополог Виктор Бачли в своей работе 1999 года писал, что «утопизм и стремление к реформированию повседневной жизни, положенные в основу проекта дома Наркомфина, впали в немилость практически сразу по его завершении. С началом пятилетки и консолидации власти Сталиным заложенные в проект идеи коллективизма и феминизма были отвергнуты как левацкие и троцкистские»</p>
 
-      <h2>Известные жители</h2>
+      <h2 id='s6'>Известные жители</h2>
 
       <ul>
         <li>Антонов-Овсеенко Владимир Александрович, кв. 49 — нарком юстиции РСФСР, с женой Софьей Ивановной Левиной.</li>
@@ -210,7 +210,7 @@
       <p>Дом заселялся в 1931 году (одновременно с заселением Дома на набережной на улице Серафимовича, д. 2) представителями советской номенклатуры республиканского уровня. Наиболее заметные из них по своему положению занимали квартиры в верхних этажах и в торцах жилого корпуса. Позднее, в 1937—1938 годах, большинство из них были осуждены и расстреляны как «враги народа». По количеству репрессированных жильцов в годы «большого террора» дом Наркомфина (он же 2-й дом СНК), вероятно, сопоставим лишь с 1-м домом СНК (Дом на набережной). Жильцы (поголовно советская номенклатура республиканского уровня) не менее двадцати квартир были репрессированы. Практически все они были расстреляны, но были и отбывавшие срок приговора в ГУЛАГе. И по воспоминаниям Екатерины Милютиной, в конце 1950-х в дом ещё наведывались взрослые дети семей, выселенные из дома в 1937-м и 1938-м годах, желавшие посмотреть на свои квартиры и на тех, кто в них теперь живёт.</p>
       <p>Сам М. Я. Гинзбург никогда не жил в доме Наркомфина, несмотря на кочующие в Интернете легенды по этому поводу. В период отделки здания в одной из квартир находилась его мастерская, см. фото, автор Владимир Грюнталь. По воспоминаниям старожилов, живших здесь ещё в 1950-х годах, при заселении дома Гинзбургу была предложена в нём квартира, но он отказался, отдав предпочтение жилью традиционной архитектуры.</p>
 
-      <h2>История эксплуатации здания и его современное состояние</h2>
+      <h2 id='s7'>История эксплуатации здания и его современное состояние</h2>
 
       <p>С середины 1930-х годов дом № 25, корп. 1 стоял на балансе Совета народных комиссаров, с 1946 года — Совета Министров РСФСР вплоть до конца 1950-х годов. В конце 1950-х годов снят с баланса Совета Министров РСФСР и передан в общегородское подчинение (в ЖЭК).</p>
       <p>За все годы существования дома не было выполнено ни одного капитального ремонта. В конце 1970-х власти Москвы собирались сделать капремонт, для чего выселили тридцать квартир, но так и не успели. Отсутствие капитального ремонта дома (помимо окраски фасадов) объясняется в том числе и тем, что после войны 1941—1945 годов в архивах не оказалось детальных чертежей здания, а равным образом и чертежей коммуникаций водоснабжения, канализации и вентиляции. По данным Архнадзора, Гинзбург никогда не публиковал осуществленный вариант планов дома и не упоминал о наличии в нём квартиры Милютина. Как сообщает Е. Б. Овсянникова (2015), «чертежи, чудесным образом, были обнаружены в цюрихском архиве Ле Корбюзье»</p>
@@ -221,7 +221,7 @@
       <p>По состоянию на февраль 2017 года помещения дома сдавались для жилья и под офисы. В дом также можно было попасть через экскурсии, которые проводились регулярно.</p>
       <p>По состоянию на середину 2017 года собственником здания Наркомфина являлась компания «Лига прав». С июля 2017 года эта компания начала реставрацию здания; работами руководит архитектор Алексей Гинзбург (внук Моисея Гинзбурга). В августе 2017 года стало известно, что достигнута договоренность о том, что компания «Лига прав» получит от Сбербанка на реставрацию дома Наркомфина кредит в размере 855 млн рублей. В ходе работ предполагается демонтаж мансардного этажа и хозяйственных пристроек коммунального корпуса, восстановление исторической планировки первого этажа, а также восстановление элементов фасадов, витража коммунального корпуса, винтовой лестницы на крыше, ограждений балконов и кровли. Планируется приспособить здание для современного использования, в том числе вновь использовать помещения для временного или постоянного заселения; на первом этаже здания откроется мужей, а в здании хозблока разместится ресторан. Планируется, что реставрация будет закончена в 2019 году</p>
 
-      <h2>Роль и значение проекта в исторической перспективе</h2>
+      <h2 id='s8'>Роль и значение проекта в исторической перспективе</h2>
 
       <p>Сдача дома Наркомфина по времени совпала с критическим переломом в судьбе архитектуры в СССР: все профессиональные объединения были распущены, а вместо них возник Союз архитекторов СССР, призванный определять облик новой советской архитектуры. Конструктивизм и рационализм были заклеймены как «формализм» и иностранные заимствования, чуждые советскому человеку. Практика домов-коммун была осуждена специальным постановлением ЦК ВКП(б) от 16 мая 1930 года «О работе по перестройке быта». В архитектуре был объявлен курс на «освоение классического наследия». Новое градостроительство с 1931 года было ориентировано на создание монументальных городских центров и рассматривало в качестве достойной обсуждения жилой архитектуры только декорировавшие эти центры отдельные дома. В 1930-е годы упоминания "дома для работников Наркомфина" исчезают из публичного пространства и появляется вновь лишь спустя три десятилетия, в 1960-е годы.</p>
       <p>Историк сталинской архитектуры Дмитрий Хмельницкий даёт ключ к пониманию причин удаления Николая Милютина из архитектуры и последующего ожидания им ареста: </p>
