--- a/feed.html
+++ b/feed.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+     <!-- <meta charset="utf-8"> -->
+    <title>feed</title>
 
     <link rel="stylesheet" href="stylesheets/style.css">
+
+</head>
+<body>
 
     <nav class="menubar">
       <a id="logo" href=""></a>
@@ -13,9 +16,9 @@
 
     <section class="postsFeed">
         <a href="" class="postsCard"
-          <figure style="background-image: url(imades/narkomfin.jpg)"></figure>
-
-          <h2>Дом Наркомфина</h2>
+           <figure style="background-image: url(images/narkomfin.jpg)"></figure>
+          <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+          <h2>Дом Наркомфина - жилой дом переходного типа</h2>
 
           <p>
             Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.
@@ -25,9 +28,10 @@
 
 
         <a href="" class="postsCard"
-          <figure style="background-image: url(imades/centrosouz.jpg)"></figure>
+          <figure style="background-image: url(images/centrosouz.jpg)"></figure>
 
-          <h2>Здание Центросоюза</h2>
+          <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+          <h2>Здание Центросоюза - жилой дом переходного типа</h2>
 
           <p>
             Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.
@@ -36,8 +40,10 @@
         </a>
 
         <a href="" class="postsCard"
+          <figure style="background-image: url(images/centrosouz.jpg)"></figure>
 
-          <h2>Дом Наркомфина</h2>
+          <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+          <h2>Дом Наркомфина - жилой дом переходного типа</h2>
 
           <p>
             Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.
@@ -47,8 +53,9 @@
     </section>
 
 
-  </head>
-  <body class="feed bg">
+
+</body>
+   <body class="feed bg">
 
   </body>
 </html>
