--- a/feed.html
+++ b/feed.html
@@ -15,9 +15,9 @@
     </nav>
 
     <section class="postsFeed">
-        <a href="" class="postsCard"
+        <a href="" class="postsCard">
            <figure style="background-image: url(images/narkomfin.jpg)"></figure>
-          <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+
           <h2>Дом Наркомфина - жилой дом переходного типа</h2>
 
           <p>
@@ -30,7 +30,7 @@
         <a href="" class="postsCard"
           <figure style="background-image: url(images/centrosouz.jpg)"></figure>
 
-          <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+
           <h2>Здание Центросоюза - жилой дом переходного типа</h2>
 
           <p>
@@ -42,7 +42,7 @@
         <a href="" class="postsCard"
           <figure style="background-image: url(images/centrosouz.jpg)"></figure>
 
-          <img src="images/narkomfin.jpg" alt="Дом наркомфина">
+
           <h2>Дом Наркомфина - жилой дом переходного типа</h2>
 
           <p>
