--- a/feed.html
+++ b/feed.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <!-- <meta charset="utf-8"> -->
-    <title>feed</title>
+     <meta charset="utf-8">
+    <title></title>
 
     <link rel="stylesheet" href="stylesheets/style.css">
 
 </head>
 <body>
-
+  <body class="feed bg">
     <nav class="menubar">
       <a id="logo" href=""></a>
       <a href="">О проекте</a>
@@ -18,10 +18,10 @@
         <a href="" class="postsCard">
            <figure style="background-image: url(images/narkomfin.jpg)"></figure>
 
-          <h2>Дом Наркомфина - жилой дом переходного типа</h2>
+          <h2>Дом Наркомфина</h2>
 
           <p>
-            Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.
+            Дом Наркомфина — жилой дом «переходного типа», построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.
           </p>
 
         </a>
@@ -54,8 +54,6 @@
 
 
 
-</body>
-   <body class="feed bg">
-
   </body>
+
 </html>
