--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 
     <link rel="stylesheet" href="stylesheets/style.css">
 
+    <script src="javascripts/jquery.js" charset="utf-8"></script>
+    <script src="javascripts/sidebar.js" charset="utf-8"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
   <body class="landing bg">
-
     <nav class="menubar">
       <a id="logo" href=""></a>
       <a href="">О проекте</a>
@@ -35,7 +38,7 @@
 
         </section>
 
-        <figure></figure>
+        <figure class="mokup" id="mockup1"></figure>
       </section>
 
       <section class="mainSection right">
@@ -57,7 +60,7 @@
 
         </section>
 
-        <figure></figure>
+        <figure class="mokup" id="mockup2"></figure>
       </section>
 
       <section class="mainSection left">
@@ -80,7 +83,7 @@
 
         </section>
 
-        <figure></figure>
+        <figure class="mokup" id="mockup3"></figure>
 
       </section>
 
@@ -97,8 +100,22 @@
             выложенному на GitHub, или записаться на курс “Основы <br>
             веб-вёрстки с Захаром Днём” на Hack Exchange.
           </p>
-        </section>
 
+          <nav>
+            <a href="#" class="btn small white">Исходный код на GitHub</a>
+            <a href="http://lessons.hack.exchange/" class="btn large green">Курс на Hack Exchange</a>
+          </nav>
+
+        </section>
+        <footer>
+          <p>Пожалуйста, поделитесь знаниями с друзьями</p>
+
+          <div class="social-likes social-likes_single" data-counters="no" data-url="http://wikimedium.hack.exchange/" data-single-title="Поделиться">
+            <div class="facebook" title="Поделиться ссылкой на Фейсбуке">Facebook</div>
+            <div class="twitter" title="Поделиться ссылкой в Твиттере">Twitter</div>
+            <div class="vkontakte" title="Поделиться ссылкой во Вконтакте">Вконтакте</div>
+          </div
+        </footer>
 
       </section>
 
