--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           </h2>
 
           <p>
-            Вы можете обучаться самостоятельно по исходному коду проекта, <br>
-            выложенному на GitHub, или записаться на курс “Основы <br>
-            веб-вёрстки с Захаром Днём” на Hack Exchange.
+            Вы можете обучаться самостоятельно по исходному<br class="tablet"> коду проекта,<br class="desktop">
+            выложенному на GitHub, или записаться<br class="tablet"> на курс “Основы<br class="desktop">
+            веб-вёрстки с Захаром Днём”<br class="tablet"> на Hack Exchange.
           </p>
 
           <nav>
